12.8
-----
* Stats Insights: New two-column layout for Follower Totals stats.
* Stats Periods: Countries Map added in countries section.
* Updated copy for preview unavailable screen
* Stats Insights: New two-column layout for This Year stats.
* Stats Insights: added details option for This Year stats.
* Stats Insights: New two-column layout for Most Popular Time stats.
* Post preview: Fixed issue with preview for self hosted sites not working. 

12.7
-----
* Block Editor: Video, Quote and More blocks are available now.
* Post Settings: Setting a Featured Image on a Post/Site should now work better in poor network conditions.
* Offline Improvements: Posts that failed to upload due to connectivity issues will be auto-uploaded.
* Block Editor: Copy/Paste of text with attributes( bold, italic, ...) will be respected on the editor.
* Block Editor: Updated color scheme.
* Block Editor: Nested lists are now available on the toolbar.
* Post Settings: Setting a Featured Image on a Post/Site should now work better in poor netowrk conditions.
* Stats Insights: New two-column layout for All-Time stats.
* Stats Insights: New two-column layout for Today stats.

12.6
-----
* Block Editor: Added UI to display a warning when a block has invalid content.
* Block Editor: Fixed issue with link settings where “Open in New Tab” was always OFF on open.
* Removed the limit of number of photos that can be shared from other apps.
* Account Settings Primary Site now shows the site domain if the site has no name.
* The app now launches a bit more quickly.
* Added a list of third-party library acknowledgements.
* Updated messaging experience for a reply upload result.
* Stats: Fixed an issue where chart axes may be formatted incorrectly in some locales.

12.5
-----
* Fixed Notices sometimes showing behind the keyboard
* Implemented Domain Credit feature
* Implemented auto saving a post on preview  
* The app now launches a bit more quickly.