@@ -6,7 +6,8 @@
 * Stats Insights: New two-column layout for This Year stats.
 * Stats Insights: added details option for This Year stats.
 * Stats Insights: New two-column layout for Most Popular Time stats.
-* Post preview: Fixed issue with preview for self hosted sites not working. 
+* Post preview: Fixed issue with preview for self hosted sites not working.
+* Stats: modified appearance of empty charts.
 
 12.7
 -----
